Changed user-related tables Added exeptions package with first exceptions added entities classes added repo and service for User

--- a/app/src/main/resources/db.changelog.yaml
+++ b/app/src/main/resources/db.changelog.yaml
@@ -7,3 +7,11 @@ databaseChangeLog:
         stripComments: true
         splitStatements: false
         path: db.changelog/20240923_user-related_tables.sql
+  - changeSet:
+      id: 20240923_delete_user_authority_table_update_user.sql
+      author: Klaudia Janiszewska
+      sqlFile:
+        relativeToChangelogFile: true
+        stripComments: true
+        splitStatements: false
+        path: db.changelog/20240923_delete_user_authority_table_update_user.sql
